UI consistency + coding standards
- Convert all tables to ResizableTable component
- Remove Load column from Hosts, replace Tag with Subscription in Shows
- Fix 50+ SonarLint/ESLint warnings (regex, replaceAll, Readonly props, etc.)
- Fix markdownlint errors in README.md and PROJECT_STATUS.md
- Add CODING_STANDARDS.md documenting lint rules
- Update .vscode/settings.json with exclusions
- Add .rhda.yaml to exclude opencue/ from vulnerability scanning
- Fix deprecated React.ElementRef -> React.ComponentRef

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,5 +12,11 @@
     "launcher/**": true,
     ".next/**": true,
     "node_modules/**": true
+  },
+  "redhat.telemetry.enabled": false,
+  "redHatDependencyAnalytics.exhortSnykToken": "",
+  "redHatDependencyAnalytics.matchManifestVersions": false,
+  "files.watcherExclude": {
+    "opencue/**": true
   }
 }
